Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22176

Setting fragmentShader/vertexShader property for ShaderEffect does not cause repaint

    XMLWordPrintable

Details

    • 113fbdede370e9c8311f7676fa48a3a3b89d0c20

    Description

      It would be nice that when fragmentShader and/or vertextShader properties are changed ShaderEffect would repaint itself.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkalland Kim Motoyoshi Kalland (Inactive)
            markniem Marko Niemelä
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes