Repaint when the ShaderEffect's shader properties change.

Task-number: QTBUG-22176

Change-Id: I742d67fc9d4b379ffe931053c096153394a93bec
Reviewed-by: Yoann Lopes <yoann.lopes@nokia.com>